--- a/chains.yaml
+++ b/chains.yaml
@@ -2461,6 +2461,11 @@ chain-settings:
           short-names: [dogecoin-testnet]
           code: DOGECOIN_TESTNET
           grpcId: 10125
+          settings:
+            expected-block-time: 1s
+            lags:
+              syncing: 40
+              lagging: 20
     - id: litecoin
       label: Litecoin
       type: bitcoin
