--- a/chains.yaml
+++ b/chains.yaml
@@ -3204,6 +3204,12 @@ chain-settings:
           syncing: 40
           lagging: 20
       chains:
+        - id: Mainnet
+          priority: 100
+          code: TEMPO_MAINNET
+          grpcId: 1149
+          chain-id: 0x1079
+          short-names: [tempo-mainnet, tempo]
         - id: Testnet
           priority: 10
           code: TEMPO_TESTNET
