--- a/chains.yaml
+++ b/chains.yaml
@@ -3745,3 +3745,27 @@ chain-settings:
           short-names: [zkverify-testnet]
           chain-id: ZkVerify Testnet
           grpcId: 10183
+    - id: aztec
+      label: Aztec
+      type: eth
+      settings:
+        expected-block-time: 36s
+        options:
+          validate-peers: false
+        lags:
+          syncing: 40
+          lagging: 20
+      chains:
+        - id: Mainnet
+          priority: 100
+          code: AZTEC_MAINNET
+          grpcId: 1150
+          chain-id: 0x1
+          short-names: [aztec-mainnet, aztec]
+        - id: Testnet
+          priority: 10
+          code: AZTEC_TESTNET
+          grpcId: 10186
+          chain-id: 0xaa36a7
+          short-names: [aztec-testnet]
+   
