--- a/chains.yaml
+++ b/chains.yaml
@@ -248,7 +248,7 @@ chain-settings:
         allow-pruning-requirement: true
         mev-critical: true
         lags:
-          syncing: 100
+          syncing: 1000
           lagging: 50
       chains:
         - id: Mainnet
@@ -3749,6 +3749,7 @@ chain-settings:
       label: Aztec
       type: aztec
       settings:
+        fork-choice: height
         expected-block-time: 36s
         options:
           validate-peers: false
