feat: add reth client support for base network and update blacklist for v1.9.3

--- a/compatible-clients.yaml
+++ b/compatible-clients.yaml
@@ -15,3 +15,8 @@ rules:
       - bsc
     blacklist:
       - "reth/v1.6.0-2a4968e/x86_64-unknown-linux-gnu"
+  - client: reth
+    networks:
+      - base
+    blacklist:
+      - v1.9.3
