--- a/chains.yaml
+++ b/chains.yaml
@@ -3798,4 +3798,20 @@ chain-settings:
           short-names: [moca-testnet]
           chain-id: 0x366a8
           grpcId: 10188
-
+    - id: centrifuge
+      label: Centrifuge
+      type: eth
+      settings:
+        expected-block-time: 12s
+        options:
+          validate-peers: false
+        lags:
+          syncing: 10
+          lagging: 5
+      chains:
+        - id: Mainnet
+          priority: 100
+          code: CENTRIFUGE_MAINNET
+          short-names: [centrifuge, centrifuge-mainnet]
+          chain-id: 0x7ef
+          grpcId: 1152
